--- a/pythonscripts/Unit_Archer.html
+++ b/pythonscripts/Unit_Archer.html
@@ -2,108 +2,154 @@
 <html>
   <head>
     <title>Archer</title>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Unit: Archer</h1>
-    <img src="./img/Archer.gif">
-    <div>
-      <table>
-        <thead>
-          <tr>
-            <th>Unit Costs</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <img src="./img/food.png">
-            </td>
-            <td>Food:</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./img/wood.png">
-            </td>
-            <td>Wood:</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./img/stone.png">
-            </td>
-            <td>Stone:</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./img/iron.png">
-            </td>
-            <td>Iron:</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./img/gold.png">
-            </td>
-            <td>Gold:</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./img/diamond.png">
-            </td>
-            <td>Diamond:</td>
-            <td>0</td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./img/emerald.png">
-            </td>
-            <td>Emerald:</td>
-            <td>0</td>
-          </tr>
-        </tbody>
-      </table>
+    <div id="Header">
+      <img src="banner.png">
     </div>
-    <div>
-      <table>
-        <thead>
-          <tr>
-            <th>Unit Attributes</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Max Health:</td>
-            <td>10.0</td>
-          </tr>
-          <tr>
-            <td>Knock back resistance:</td>
-            <td>0.0</td>
-          </tr>
-          <tr>
-            <td>Armor: </td>
-            <td>2.0</td>
-          </tr>
-          <tr>
-            <td>Armor Toughness: </td>
-            <td>0.0</td>
-          </tr>
-          <tr>
-            <td>Attack Knockback: </td>
-            <td>0.0</td>
-          </tr>
-          <tr>
-            <td>Attack Damage: </td>
-            <td>3.0</td>
-          </tr>
-          <tr>
-            <td>Follow Range: </td>
-            <td>24.0</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="column" id="NavBar">
+      <h3>Units:</h3>
+      <ul>
+        <li>
+          <a href="Unit_Minion.html">Minion</a>
+        </li>
+        <li>
+          <a href="Unit_Archer.html">Archer</a>
+        </li>
+        <li>
+          <a href="Unit_Crossbowmen.html">Crossbowmen</a>
+        </li>
+        <li>
+          <a href="Unit_Sapper.html">Sapper</a>
+        </li>
+        <li>
+          <a href="Unit_Lancer.html">Lancer</a>
+        </li>
+        <li>
+          <a href="Unit_Trebuchet.html">Trebuchet</a>
+        </li>
+        <li>
+          <a href="Unit_Longbowmen.html">Longbowmen</a>
+        </li>
+        <li>
+          <a href="Unit_AdvancedKnight.html">AdvancedKnight</a>
+        </li>
+        <li>
+          <a href="Unit_Knight.html">Knight</a>
+        </li>
+        <li>
+          <a href="Unit_Pikeman.html">Pikeman</a>
+        </li>
+      </ul>
+    </div>
+    <div class="column" id="Text">
+      <div>
+        <p>A ranged unit armed with a bow</p>
+      </div>
+    </div>
+    <div class="column" id="unitDetail">
+      <h1>Unit: Archer</h1>
+      <img src="./img/Archer.gif">
+      <div>
+        <table>
+          <thead>
+            <tr>
+              <th>Unit Costs</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <img src="./img/food.png">
+              </td>
+              <td>Food:</td>
+              <td>6</td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./img/wood.png">
+              </td>
+              <td>Wood:</td>
+              <td>6</td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./img/stone.png">
+              </td>
+              <td>Stone:</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./img/iron.png">
+              </td>
+              <td>Iron:</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./img/gold.png">
+              </td>
+              <td>Gold:</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./img/diamond.png">
+              </td>
+              <td>Diamond:</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./img/emerald.png">
+              </td>
+              <td>Emerald:</td>
+              <td>0</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div>
+        <table>
+          <thead>
+            <tr>
+              <th>Unit Attributes</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Max Health:</td>
+              <td>10.0</td>
+            </tr>
+            <tr>
+              <td>Knock back resistance:</td>
+              <td>0.0</td>
+            </tr>
+            <tr>
+              <td>Armor: </td>
+              <td>2.0</td>
+            </tr>
+            <tr>
+              <td>Armor Toughness: </td>
+              <td>0.0</td>
+            </tr>
+            <tr>
+              <td>Attack Knockback: </td>
+              <td>0.0</td>
+            </tr>
+            <tr>
+              <td>Attack Damage: </td>
+              <td>3.0</td>
+            </tr>
+            <tr>
+              <td>Follow Range: </td>
+              <td>24.0</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </body>
 </html>
