Started work on bulidngs & unit comparison wiki pages

--- a/pythonscripts/Unit_Trebuchet.html
+++ b/pythonscripts/Unit_Trebuchet.html
@@ -9,6 +9,12 @@
       <img src="banner.png">
     </div>
     <div class="column" id="NavBar">
+      <h3></h3>
+      <ul>
+        <li>
+          <a href="Index.html">Home</a>
+        </li>
+      </ul>
       <h3>Units:</h3>
       <ul>
         <li>
@@ -40,6 +46,15 @@
         </li>
         <li>
           <a href="Unit_Pikeman.html">Pikeman</a>
+        </li>
+      </ul>
+      <h3>Buildings:</h3>
+      <ul>
+        <li>
+          <a href="Building_Town Hall.html">Town Hall</a>
+        </li>
+        <li>
+          <a href="Building_Farm.html">Farm</a>
         </li>
       </ul>
     </div>
