--- a/pythonscripts/Unit_Minion.html
+++ b/pythonscripts/Unit_Minion.html
@@ -9,6 +9,12 @@
       <img src="banner.png">
     </div>
     <div class="column" id="NavBar">
+      <h3></h3>
+      <ul>
+        <li>
+          <a href="Index.html">Home</a>
+        </li>
+      </ul>
       <h3>Units:</h3>
       <ul>
         <li>
@@ -40,6 +46,15 @@
         </li>
         <li>
           <a href="Unit_Pikeman.html">Pikeman</a>
+        </li>
+      </ul>
+      <h3>Buildings:</h3>
+      <ul>
+        <li>
+          <a href="Building_Town Hall.html">Town Hall</a>
+        </li>
+        <li>
+          <a href="Building_Farm.html">Farm</a>
         </li>
       </ul>
     </div>
@@ -126,6 +141,10 @@
             <tr>
               <td>Knock back resistance:</td>
               <td>0.0</td>
+            </tr>
+            <tr>
+              <td>Movement Speed:</td>
+              <td>0.35</td>
             </tr>
             <tr>
               <td>Armor: </td>
